--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
 "dependencies": {
   "next": "14.2.3",
   "react": "^18",
-  "react-dom": "^18",
-  "@google/generativeai": "0.21.0"
+  "react-dom": "^18"
 },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -26,5 +25,6 @@
     "typescript": "^5"
   }
 }
+
 
 
