--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "14.2.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -25,3 +26,4 @@
     "typescript": "^5"
   }
 }
+
