--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-easy-crop": "^5.2.0"
+    "react-easy-crop": "^5.2.0",
+    "@google/generative-ai": "^0.21.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -26,4 +27,5 @@
     "typescript": "^5"
   }
 }
+
 
